--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Kfir&Ofri",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
