--- a/teachers-pet-client/package.json
+++ b/teachers-pet-client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "@mui/styled-engine": "^6.4.8",
     "@react-oauth/google": "^0.12.1",
