--- a/teachers-pet-client/package.json
+++ b/teachers-pet-client/package.json
@@ -15,7 +15,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
     "emotion": "^11.0.0",
+    "fs": "^0.0.1-security",
     "mui": "^0.0.1",
+    "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
@@ -23,8 +25,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start:dev": "REACT_APP_ENV=development react-scripts start",
+    "start:prod": "REACT_APP_ENV=production react-scripts start",
+    "build": " react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
