--- a/teachers-pet-client/package.json
+++ b/teachers-pet-client/package.json
@@ -25,9 +25,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start:dev": "REACT_APP_ENV=development react-scripts start",
-    "start:prod": "REACT_APP_ENV=production react-scripts start",
-    "build": " react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
